# LMS_Project

./: .gitignore  malwarescanner.readme
backend/: .env  .env.example  Cargo.toml
backend/src/: app_state.rs  config.rs  lib.rs  main.rs
backend/src/controller/: admin_controller.rs  assignment_controller.rs  certificate_controller.rs  cloudinary_controller.rs  course_controller.rs  discussion_controller.rs  enrollment_controller.rs  grade_controller.rs  mailer_controller.rs  mod.rs  module_content_controller.rs  module_controller.rs  organisation_controller.rs  payment_controller.rs  quiz_analytics_controller.rs  quiz_answers_controller.rs  quiz_attempts_controller.rs  quiz_controller.rs  quiz_options_controller.rs  quiz_questions_controller.rs  student_controller.rs  submission_controller.rs  user_controller.rs  viewer_controller.rs
backend/src/db/: 20260621_quiz_concurrency.sql  20260624_org_classes.sql  20260624_password_lockout.sql  20260625_assignment_module_grading.sql  20260626_assignment_prerequisites.sql  Script(23may).txt  Script.text  connection.rs  demo_course_seed.md  demo_user_seed.md  lms_script.txt
backend/src/entity/: assignment_prerequisites.rs  assignments.rs  course_certificates.rs  course_instructors.rs  courses.rs  email_verification_tokens.rs  enrollments.rs  lesson_contents.rs  lesson_progress.rs  lessons.rs  mod.rs  module_contents.rs  module_discussion_replies.rs  module_discussion_threads.rs  module_discussion_topics.rs  module_prerequisites.rs  module_progress.rs  modules.rs  org_class_courses.rs  org_class_members.rs  org_classes.rs  organisations.rs  (+15 more)
backend/tmp/: 021b9a9a-64b6-4fc5-8e2b-24b06b3614e6.upload
(+153 files in other folders)
