[package]
name = "lms_project"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-cors = "0.7.1"
actix-web = "4.13.0"
chrono = "0.4.44"
dotenvy = "0.15.7"
hex = "0.4.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
sha1 = "0.11.0"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "macros"] }
tokio = { version = "1.52.3", features = ["full"] }
