[package]
name = "lms_project"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-cors = "0.7.1"
actix-files = "0.6.10"
actix-web = "4.13.0"
chrono = "0.4.44"
dotenvy = "0.15.7"
hex = "0.4.3"
lettre = "0.11.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
sea-orm = { version = "1.1", features = [
  "sqlx-postgres",
  "runtime-tokio-native-tls",
  "macros"
] }
sha1 = "0.11.0"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "macros"] }
rust_decimal = { version = "1", features = ["serde"] }
tera = "1.20.1"
tokio = { version = "1.52.3", features = ["full"] }
